# XWQuery

./: .gitignore  BIDIRECTIONAL_GRAMMAR_STATUS.md  CRITICAL_ISSUES_AND_FIXES.md  FINAL_REVIEW_SUMMARY.md  GRAMMAR_TEST_RESULTS.md  README.md  REVIEW_COMPLETE.md  XWQUERY_FIXES_COMPLETE.md  pyproject.toml  pyproject.xwquery.toml  pytest.ini  requirements.txt
xwlazy/: .gitignore  .pre-commit-version-check.py  CRITICAL_ISSUES.md  FEATURE_COMPARISON.md  FEATURE_COMPARISON_Updated.md  ISSUES_ANALYSIS.md  MIGRATION_STATUS.md  README.md  TEST_RESULTS.md  YAML_CIRCULAR_IMPORT_ISSUE.md  pyproject.toml  pyproject.xwlazy.toml  pytest.ini  requirements.txt  test_per_package_isolation.py  test_recursion_fix.py  test_simple_auto_install.py  xwlazy.lock.toml  xwlazy_sbom.toml
xwlazy/.benchmarks/: COMPETITION_ANALYSIS.md
xwlazy/.benchmarks/Windows-CPython-3.12-64bit/: 0001_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_145228_uncommited-changes.json  0002_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_145302_uncommited-changes.json  0003_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_171848_uncommited-changes.json  0004_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_172615_uncommited-changes.json  0005_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_173605_uncommited-changes.json  0006_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_174219_uncommited-changes.json  0007_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_174442_uncommited-changes.json  0008_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_174621_uncommited-changes.json  0009_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_174844_uncommited-changes.json  0010_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_175023_uncommited-changes.json  0011_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_175107_uncommited-changes.json  0012_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_181457_uncommited-changes.json  0013_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_181720_uncommited-changes.json  0014_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_181735_uncommited-changes.json  0015_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_181749_uncommited-changes.json  0016_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_181801_uncommited-changes.json  0017_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_190327_uncommited-changes.json  0018_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_190432_uncommited-changes.json  0019_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_190445_uncommited-changes.json  0020_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_190457_uncommited-changes.json  0021_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_190511_uncommited-changes.json  0022_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_190637_uncommited-changes.json  0023_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_190726_uncommited-changes.json  0024_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_190929_uncommited-changes.json  0025_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_191007_uncommited-changes.json  0026_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_191121_uncommited-changes.json  0027_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_191154_uncommited-changes.json  0028_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_192531_uncommited-changes.json  0029_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_195157_uncommited-changes.json  0030_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_195500_uncommited-changes.json  0031_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_195606_uncommited-changes.json  0032_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_214450_uncommited-changes.json  0033_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_214703_uncommited-changes.json  0034_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_214751_uncommited-changes.json  0035_1832087ab91775cab8f8f1be924b3fc6bc58d64c_20251115_214855_uncommited-changes.json
xwlazy/.github/: workflows-config.yaml
xwlazy/.github/workflows/: check-versions.yml  publish.yml
xwlazy/_archive/lazy/: __init__.py  config.py  host_conf.py  lazy_base.py  lazy_contracts.py  lazy_core.py  lazy_errors.py  logging_utils.py  manifest.py
xwlazy/benchmarks/: FASTEST_MODE_ANALYSIS.md
xwlazy/benchmarks/20260209-benchmark competition/: README.md
xwlazy/docs/: BEST_PRACTICES.md  CONTRIBUTING_VERSIONS.md  CRITICAL_ISSUES_RESOLVED.md  GUIDE_01_USAGE.md  HOOKING_GUIDE.md  INDEX.md  INTEGRATION_GUIDE.md  KEYWORD_DETECTION.md  PERFORMANCE_ANALYSIS.md  PRODUCTION_DEPLOYMENT.md  REF_01_REQ.md  REF_12_IDEA.md  REF_13_ARCH.md  REF_14_DX.md  REF_15_API.md  REF_22_PROJECT.md  REF_51_TEST.md  REF_ARCH.md  REF_IDEA.md  STABLE_RELEASE_CHECKLIST.md  TROUBLESHOOTING.md  XWLAZY_LITE.md  XWLAZY_LITE_V3.0_SUMMARY.md
xwlazy/examples/: README.md
xwlazy/examples/demo_app/: demo.py  (+7 more)
xwlazy/scripts/: check_dup_keys.py  sync_top500_libs.py  test_sync_verification.py
xwlazy/src/: xwlazy.py  xwlazy_wrapper.py
xwlazy/tests/: __init__.py  conftest.py  runner.py  test_cache_fix.py  test_cache_persistence.py  test_install_cache.py  test_installer_cache_integration.py  test_installer_methods.py  test_missing_package_auto_install.py  test_original_issue.py  test_partial_module_strategies.py  test_strategies_direct.py  test_yaml_integration.py
xwsyntax/: .gitignore  CHANGELOG.md  MANIFEST.in  NEXT_STEPS.md  README.md  XWSYNTAX_CRITICAL_FIXES_SUMMARY.md  XWSYNTAX_REVIEW_COMPLETE.md  pyproject.toml  pyproject.xwsyntax.toml  pytest.ini  requirements.txt
xwsyntax/benchmarks/: ast_strategy_benchmark.py  benchmark_bidirectional.py
xwsyntax/docs/: ARCHITECTURE.md  COMPLETE_STATUS.md  EXTRACTION_FINAL_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  GRAMMARS_MASTER_INTEGRATION.md  IMPLEMENTATION_STATUS.md  INDEX.md  README.md  XWSYNTAX_EXTRACTION_SUCCESS.md
xwsyntax/examples/: basic_usage.py  test_all_grammars.py  test_multiformat_grammars.py  xwnode_integration_poc.py
xwsyntax/scripts/: generate_grammar_info.py
xwsyntax/src/: xwsyntax.py
xwsyntax/tests/: __init__.py  conftest.py  runner.py  runner_out.md  test_complex_json.json  verify_installation.py
(+1658 files in other folders)
