# project-src-size=1631984 ; 1.56 MB

# Source size (src/*): ~1.53 MB
[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[project]
  name = "exonware-xwquery"
  dynamic = ["version"]
  description = "Universal query language for data structures - 50+ operations, 35+ format converters"
  readme = "README.md"
  requires-python = ">=3.12"
  keywords = ["query", "sql", "graphql", "cypher", "sparql", "data", "conversion", "exonware"]
  classifiers = []
  dependencies = [
    "exonware-xwsyntax",  # file-size=727354 ; 0.69 MB
    # total = src + deps ; 2.25 MB
  ]
  authors = [
    { name = "eXonware Backend Team", email = "connect@exonware.com" },
  ]

  [project.license]
    text = "MIT"

  [project.optional-dependencies]
    dev = [
      "black>=23.0.0",  # file-size=3914855 ; 3.73 MB
      "exonware-xwlazy",  # file-size=349706 ; 0.33 MB
      "exonware-xwsyntax[dev]",  # file-size=38608568 ; 36.82 MB
      "isort>=5.12.0",  # file-size=568232 ; 0.54 MB
      "mypy>=1.0.0",  # file-size=29775254 ; 28.40 MB
      "pytest>=7.0.0",  # file-size=3152415 ; 3.01 MB
      "pytest-asyncio>=0.21.0",  # file-size=46752 ; 0.04 MB
      "pytest-cov>=4.0.0",  # file-size=71639 ; 0.07 MB
      # total = src + deps ; 74.50 MB
    ]
    lazy = [
      "exonware-xwlazy",  # file-size=349706 ; 0.33 MB
      "exonware-xwsyntax[lazy]",  # file-size=1080033 ; 1.03 MB
      # total = src + deps ; 2.92 MB
    ]
    full = [
      "aiofiles",  # file-size=81991 ; 0.08 MB
      "atomicwrites",  # file-size=25022 ; 0.02 MB
      "attrs",  # file-size=440438 ; 0.42 MB
      "bcrypt",  # file-size=329770 ; 0.31 MB
      "bottleneck",  # file-size=460187 ; 0.44 MB
      "brotli",  # file-size=868889 ; 0.83 MB
      "cachebox",  # file-size=971831 ; 0.93 MB
      "cachetools",  # file-size=105183 ; 0.10 MB
      "cbor2",  # file-size=406858 ; 0.39 MB
      "charset-normalizer",  # file-size=580726 ; 0.55 MB
      "cloudpickle",  # file-size=125961 ; 0.12 MB
      "cryptography",  # file-size=10265860 ; 9.79 MB
      "cython",  # file-size=13606517 ; 12.98 MB
      "dicttoxml",  # file-size=96721 ; 0.09 MB
      "exonware-xwsyntax[full]",  # file-size=303258664 ; 289.21 MB
      "httpx",  # file-size=765633 ; 0.73 MB
      "hyperlight_hyperjson",  # file-size=261754 ; 0.25 MB
      "interegular",  # file-size=196814 ; 0.19 MB
      "json5",  # file-size=377396 ; 0.36 MB
      "lz4",  # file-size=277804 ; 0.26 MB
      "msgpack",  # file-size=238387 ; 0.23 MB
      "msgspec",  # file-size=525449 ; 0.50 MB
      "numexpr",  # file-size=742653 ; 0.71 MB
      "opentelemetry-api",  # file-size=423339 ; 0.40 MB
      "orjson",  # file-size=289443 ; 0.28 MB
      "pandas",  # file-size=67223490 ; 64.11 MB
      "psutil",  # file-size=2104166 ; 2.01 MB
      "pyarrow",  # file-size=90047710 ; 85.88 MB
      "pylru",  # file-size=74244 ; 0.07 MB
      "pymongo",  # file-size=6208897 ; 5.92 MB
      "pytz",  # file-size=1081137 ; 1.03 MB
      "PyYAML",  # file-size=730195 ; 0.70 MB
      "regex",  # file-size=1765857 ; 1.68 MB
      "rich",  # file-size=2130726 ; 2.03 MB
      "tomli-w",  # file-size=25350 ; 0.02 MB
      "uarray",  # file-size=225331 ; 0.21 MB
      "xmltodict",  # file-size=65213 ; 0.06 MB
      "zstandard",  # file-size=1384115 ; 1.32 MB
      # total = src + deps ; 486.78 MB
    ]

  [project.urls]
    Homepage = "https://exonware.com"
    Repository = "https://github.com/exonware/xwquery"
    Documentation = "https://github.com/exonware/xwquery#readme"
    Subtree = "https://github.com/exonware/xwquery.git"

[tool]
  # Dependency sizes: run 'commands measure_dependency_sizes xwquery' to refresh # project-src-size and # file-size in this file.

  [tool.black]
    line-length = 88
    target-version = ["py38"]

  [tool.isort]
    profile = "black"
    line_length = 88

  [tool.mypy]
    python_version = "0.9.0.4"
    strict = true
    warn_return_any = true
    warn_unused_configs = true
    disallow_untyped_defs = true
    disallow_any_generics = true
    disallow_untyped_calls = true
    disallow_incomplete_defs = true
    check_untyped_defs = true
    disallow_untyped_decorators = true
    no_implicit_optional = true
    warn_redundant_casts = true
    warn_unused_ignores = true
    warn_no_return = true
    warn_unreachable = true

  [tool.hatch]

    [tool.hatch.version]
      path = "src/exonware/xwquery/version.py"

    [tool.hatch.build]

      [tool.hatch.build.targets]

        [tool.hatch.build.targets.wheel]
          packages = ["src/exonware"]
          py-modules = ["src/xwquery"]

        [tool.hatch.build.targets.sdist]
          include = []
