[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exonware-xwlazy"
dynamic = ["version"]
description = "Marker package that enables lazy install features across the eXonware suite."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["lazy", "exonware", "xwlazy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[[project.authors]]
name = "Eng. Muhammad AlShehri"
email = "connect@exonware.com"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://exonware.com"
Repository = "https://github.com/exonware/xwlazy"
Documentation = "https://github.com/exonware/xwlazy#readme"

[tool.hatch.version]
path = "src/exonware/xwlazy/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/exonware"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/LICENSE"]
