# project-src-size=349706 ; 0.33 MB
# Source size (src/*): ~340.8 KB
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exonware-xwlazy"
dynamic = ["version"]
description = "Marker package that enables lazy install features across the eXonware suite."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["lazy", "lazy installation", "lazy loading", "exonware", "xwlazy", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pip",  # file-size=11430259 ; 10.90 MB
  # total = src + deps ; 11.23 MB
]

[[project.authors]]
name = "eXonware Backend Team"
email = "connect@exonware.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
lazy = [
  # total = src + deps ; 0.33 MB
]
dev = [
  "black>=23.0.0",  # file-size=3914855 ; 3.73 MB
  "isort>=5.12.0",  # file-size=568232 ; 0.54 MB
  "mypy>=1.0.0",  # file-size=29775254 ; 28.40 MB
  "pytest>=7.0.0",  # file-size=3152415 ; 3.01 MB
  "pytest-asyncio>=0.21.0",  # file-size=46752 ; 0.04 MB
  "pytest-cov>=4.0.0",  # file-size=71639 ; 0.07 MB
  # total = src + deps ; 36.12 MB
]
full = [
  # total = src + deps ; 0.33 MB
]

[project.urls]
Homepage = "https://exonware.com"
Repository = "https://github.com/exonware/xwlazy"
Documentation = "https://github.com/exonware/xwlazy#readme"
Subtree = "https://github.com/Exonware/XWLazy.git"

# Dependency sizes: run 'commands measure_dependency_sizes xwlazy' to refresh # project-src-size and # file-size in this file.

[tool.hatch.version]
path = "src/exonware/xwlazy/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/exonware", "src/xwlazy"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/LICENSE"]
